Reformulação do título referente à foto e descrição do time

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </div>
                         <br>
                         <div class="container">
-                            <h5 class="text-center">A máfia</h5>
+                            <h5 class="text-center">A Trupe</h5>
                             <div class="row justify-content-center">
                                 <img src="team.jpeg" alt="Família Insônia" class="col-6 img-thumbnail">
                                 <br>
@@ -129,10 +129,9 @@
                         </div>
                         <br><br>
                         <div class="container">
-                            <h5 class="text-center">Um pouquinho sobre nós</h5>
+                            <h5 class="text-center">Nossa História</h5>
                             <p id="conteudo">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta laboriosam quod
-                                doloremque
+                                Em meados de abril, no ano de 2019...
                                 consequatur
                                 quibusdam nostrum placeat provident debitis repellat nulla soluta ipsam aliquam et
                                 porro, ad
@@ -148,20 +147,25 @@
                         </div>
                         <br>
                         <div class="container">
-                            <h5 class="text-center">Nossa história</h5>
+                            <h5 class="text-center">Um pouquinho sobre nós</h5>
                             <p id="conteudo">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta laboriosam quod
-                                doloremque
-                                consequatur
-                                quibusdam nostrum placeat provident debitis repellat nulla soluta ipsam aliquam et
-                                porro, ad
-                                voluptas est
-                                quas vero voluptatibus reiciendis eius. Provident minus odio facere corrupti excepturi
-                                incidunt eligendi
-                                ab
-                                atque, recusandae deleniti molestias temporibus veniam voluptate rerum doloribus dolorem
-                                nesciunt
-                                repellendus omnis fuga! Commodi quis obcaecati, exercitationem repellat aliquid id iure!
+                                <b>Gabrielle -</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta
+                                laboriosam
+                                quod
+                                doloremque<br>
+                                <b>Halley -</b> quibusdam nostrum placeat provident debitis repellat nulla soluta ipsam
+                                aliquam
+                                et
+                                porro, ad<br>
+                                <b>Natasha -</b> quas vero voluptatibus reiciendis eius. Provident minus odio facere
+                                corrupti
+                                excepturi
+                                incidunt eligendi<br>
+                                <b>Sabrina -</b> atque, recusandae deleniti molestias temporibus veniam voluptate rerum
+                                doloribus dolorem
+                                nesciunt<br>
+                                <b>Wesley -</b> repellendus omnis fuga! Commodi quis obcaecati, exercitationem repellat
+                                aliquid id iure!
                                 Expedita quaerat
                             </p>
                         </div>
