--- a/index.html
+++ b/index.html
@@ -7,32 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Insônia pelo mundo...</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&display=swap');
-
-        p {
-            font: 13px Merriweather, serif;
-        }
-
-        #titulo {
-            font: 50px Dancing Script, 'Times New Roman', serif;
-            color: aliceblue;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #frase {
-            font-size: 15px;
-            font-weight: bold;
-            font-style: italic;
-        }
-
-        #conteudo {
-            text-align: justify;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
